Having fun: MST

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-   Hi!
-   <script src="script.js"></script> 
+    <p id="prompt"></p>
+    <input type="checkbox" id="check" checked>
+    <p id="output">Good Job!</p>
+    <script src="script.js"></script> 
 </body>
 </html>
